get game probability in one query for E0